# vuo

./: Dockerfile  Makefile  README.md  docker-compose.yaml
Object-Detection/: README.md
autocaption/: 2_Training.ipynb
autocaption/src/: model.py
facial-recognition/facial_keypoints/: 4. Fun with Keypoints.ipynb
facial-recognition/src/: face_recog.py
perception/: README.md  requirements.txt
perception/vision_extraction/: Perception_ROS.ipynb
perception/vision_extraction/Filters/: Canny-image.py  Hog.py  Sobel.py  Transformations-image.py
perception/vision_extraction/Matching/: ORB.py
segmentation/: pyproject.toml  requirements.txt
segmentation/feature_detection/src/: visualize.py
segmentation/src/: blob_detection.py
src/Object-Detection/: DataSet_Mask_TensorFlow1.ipynb
src/autocaption/: 0_Dataset.ipynb  1_Preliminaries.ipynb  3_Inference.ipynb  README.md
src/autocaption/src/: training_log.txt
src/facial-recognition/: Facial_recognition.ipynb  README.md
src/facial-recognition/facial_keypoints/: 1. Load and Visualize Data.ipynb  2. Define the Network Architecture.html  3. Facial Keypoint Detection, Complete Pipeline.html  models.py  requirements.txt
src/object_detection/: README.md  yolov8.ipynb
src/perception/vision_extraction/Face/: Detector-face.py  Face-load.py  Face-save.py
src/perception/vision_extraction/Filters/: Canny-video.py  Color-filter-video.py  Color-filter.py
src/segmentation/: README.md
src/segmentation/feature_detection/: CMakeLists.txt  package.xml
src/segmentation/src/: Image_Segmentation.ipynb  blob_visualize.py
(+6 files in other folders)
